# paper-craft

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 664a9f0cb3ff_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  query.py  upload.py
app/core/: config.py  security.py
app/db/models/: __init__.py
app/schemas/: __init__.py  query.py  user.py
app/services/embeddings/: base.py  (+3 more)
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 65697479b564_add_enums.py  a1b2c3d4e5f6_chapter_catalog_and_selected_chapters.py  b2c3d4e5f6a7_unique_notebook_name_per_user.py  c4bd2c3bd230_chat_tables.py  d4b9c8df77d2_notebook_tables.py  d5e6f7a8b9c0_chapter_catalog_is_available.py  e6f7a8b9c0d1_add_board.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chapters.py  chat.py  notebooks.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  chapter_catalog.py  chat.py  notebook.py  user.py
backend/app/prompts/: __init__.py  rag.py
backend/app/repositories/: chat.py
backend/app/schemas/: __init__.py  chat.py  document.py  notebook.py  user.py
backend/app/services/chat/: __init__.py  agent.py  llm.py  prompts.py  rag.py  service.py  streaming.py  tools.py
backend/app/services/ingestion/: parser.py  pipeline.py  splitter.py
backend/app/services/scripts/: backfill_qdrant_board.py  seed_chapters.py
backend/app/services/vectorstore/: client.py
backend/extracted_data/class_10/jemh101/images/: page_1_image_1.md  page_3_image_1.md
backend/extracted_data/class_10/jemh102/: jemh102.md
backend/extracted_data/class_10/jemh102/images/: page_1_image_1.md  page_4_image_1.md  page_5_image_1.md  page_5_image_2.md  page_6_image_1.md  page_7_image_1.md  page_7_image_2.md  page_7_image_3.md  page_8_image_1.md
backend/extracted_data/class_10/jemh102/tables/: page_4_table_1.md
backend/notebooks/: blueprint_extract.ipynb  export_to_docx.py  extract.ipynb  generation_graph.ipynb  rag.ipynb  schemas.py
backend/tests/: bootstrap_env.py  conftest.py  test_auth.py  test_chat.py  test_notebooks.py
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.tsx  index.css  main.tsx
notebooks/: blueprint_extract.ipynb  export_to_docx.py  extract.ipynb  generation_graph.ipynb  schemas.py
(+60 files in other folders)
