[project]
name = "paper-craft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.12",
    "langgraph>=1.2.8",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mistralai>=2.6.0",
]

[tool.fastapi]
entry-point = "app.main:app"