[project]
name = "paper-craft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "fastembed>=0.6.0",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.8",
    "pydantic-settings>=2.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mistralai>=2.6.0",
]

[tool.fastapi]
entry-point = "app.main:app"
