[project]
name = "paper-craft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi-sso>=0.21.1",
    "fastapi[standard]>=0.139.0",
    "fastembed>=0.6.0",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.13.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mistralai>=2.6.0",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "types-python-jose>=3.5.0.20260408",
]

[tool.fastapi]
entry-point = "app.main:app"

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["^notebooks/"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
